# CS4550_Compiler

./: .gitignore  .ruff.toml  CS4550_Compiler.code-workspace  LICENSE  Makefile  README  README.md  kleinc  kleinf  kleinp  kleins  kleinv  pyproject.toml  requirements.txt
doc/: all-semantic-error-log.txt  ast-nodes.txt  boolean-literal-fsm.jff  code-generator-memory-explained.md  full-fsm.jff  full-fsm.jiff  keyword-fsm.jff  klein-specification.txt  klien-specification.txt  operators-fsm.jff  parse-table.csv  refactored-grammar.txt  sets.md
doc/finite-state-machines/: identifiers-fsm.jff  integer-literal-fsm.jff  punctuation-fsm.jff  skippable-fsm.jff
programs/: BMI.kln  CommaErr.kln  EveryNode.kln  FractionAdd.kln  If_ThenErr.kln  MissingBody.kln  Perfect_Square.kln  PrintErr.kln  PrintErr2.kln  Simple.kln  TypeErr.kln  fixed-semantic-errors.kln  math.kln  math.tm  print-multiple.kln  print-one.kln  print-true.kln  print-true.tm  semantic-errors.kln  semantic-errorsFixed.kln
src/: klein_errors.py  kleins  scanner  scanner.py  token_agl.py  token_lister.py
src/compiler/: __main__.py  ast.py  ast_nodes.py  code_generator.py  ir.py  klein_errors.py  parse-table.csv  parse_table.py  parser.py  position.py  scanner.py  semantic_analyzer.py  symbol_table.py  tm.py  token.py  token_agl.py  token_lister.py  tokens.py  util.py  validator.py
src/compiler/programs/: ast_lister.py  ast_lister_dot.py  compile.py  compiler.py  display_symbol_table.py  (+1 more)
tests/: test_parser.py  test_position.py  test_scanner.py  test_semantic_analyzer.py
tests/programs/: is-special.kln
