# contents of pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compiler"
version = "0.1.0"
requires-python = ">=3.11"

[project.scripts]
klein_list_tokens = "compiler.__main__:list_tokens"
klein_parse_program = "compiler.__main__:klein_parse_program"
klein_ast_to_text = "compiler.__main__:klein_ast_to_text"
klein_ast_to_dot = "compiler.__main__:klein_ast_to_dot"
klein_display_symbol_table = "compiler.__main__:klein_display_symbol_table"
klein_compile = "compiler.__main__:klein_compile"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
